- For OpenMP instrumentation, the OMPT adapter is now used by default,
  if available. To use OPARI2 as the default instrumenter, please use
  `--enable-default=opari2` during configure. The option
  `--enable-default=ompt` will be removed in a future Score-P release.
- The HIP adapter is now enabled by default when configure detects
  the required libraries and a suitable Clang-based compiler.

Compatibility:

- The usage of POMP user instrumentation, aka `#pragma pomp ...`, is
  deprecated. Use the `SCOREP_USER_*` macros instead.
- Non-LLVM based CCE compilers are no longer supported. Please upgrade.
- Added the environment variable `NVCC` to change the compiler
  command used for checking the NVIDIA CUDA compiler during configure.
- Remove OpenACC configure options and environment variables to
  specify include paths to `openacc.h` and `acc_prof.h`. Compilers
  implementing OpenACC know where to find the header files.
- Added flag `--disable-libwrap-generator` to disable the build
  of the library wrapper generator. While `--without-llvm` still
  disables this build as well, `--with-llvm=<path>` will not
  cause configure to fail if the requirements for the generator
  build cannot be satisfied anymore.

Bugfixes:

- Prevent the OMPT adapter from aborting when nested undeferred
  OpenMP tasks report task underflows.
- Enabling the CUDA / HIP adapter together with the OMPT adapter will no
  longer cause a segmentation fault with LLVM 16.0 and newer when OpenMP
  offloading flags are used.

------------------- Released version 8.4 -----------------------------

User tools and API improvements and changes:

- Fixed assignment of functions to the `COM` category in Score-P's scoring tool.
  User wrapped libraries now do induce `COM` along call paths that reach them,
  and Score-P internal regions such as `TRACE BUFFER FLUSH` no longer induce
  `COM`.

Compatibility:

- The classic Intel compilers will now use the flag `-diag-disable=10441`